# cynantia-chat

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents_config/faq/: AGENT.md  MEMORY.md
agents_config/faq/skills/faq-lookup/: SKILL.md
agents_config/faq/skills/price-quote/: SKILL.md
agents_config/faq/skills/price-quote/assets/: price-list.json  quote-template.md
agents_config/faq/skills/price-quote/references/: pricing-rules.md
agents_config/faq/skills/price-quote/scripts/: quote.py
agents_config/math/: AGENT.md  MEMORY.md
agents_config/math/skills/arithmetic-calculator/: SKILL.md
agents_config/orchestrator/: AGENT.md  MEMORY.md
src/cynantia_chat/: __init__.py  config.py
src/cynantia_chat/agents/: a2a.py  discovery.py  model.py  orchestrator.py  prompt_loader.py  tools.py
src/cynantia_chat/agents/specialists/faq/: agent.py  server.py
src/cynantia_chat/agents/specialists/math/: agent.py  server.py
src/cynantia_chat/chat/: agent_client.py  app.py  chat_client.py
