[project]
name = "cynantia-chat"
version = "0.1.0"
description = "Multi-agent Google Chat (A2A + ADK): orchestrator mendelegasikan ke specialist, balas di thread, context persisten. Model via OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Agent + A2A (ADK membungkus model & meng-expose lewat protokol A2A)
    "google-adk[a2a]>=1.2.0",
    "litellm>=1.40.0",
    # Webhook backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    # Google Chat API (kirim balasan async ke thread) + verifikasi request
    "google-api-python-client>=2.120.0",
    "google-auth>=2.29.0",
    # Persistensi session/memory (Postgres via SQLAlchemy + psycopg)
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    # Konfigurasi
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cynantia_chat"]
